Fixed back button positioning on mobile single suspect.

--- a/css/opensource_report.less
+++ b/css/opensource_report.less
@@ -518,11 +518,10 @@
                 font-size: 34px;
             }
 
-
             md-icon {
                 font-size: 39px;
                 color: #17a1ff;
-                height: auto;
+                // height: auto;
                 @media (max-width: @screen-xs-max) {
                     font-size: 29px;
                 }
